<resources>
    <string name="app_name">RaxSoft</string>


    <!--String TextView-->
    <string name="strUsuario">Usuario</string>
    <string name="strContraseña">Contraseña</string>
    <string name="strCodigoProducto">Código Materia Prima</string>
    <string name="strNombreProudcto">Nombre de la Materia Prima</string>
    <string name="strDescripcionProducto">Descripción de la Materia Prima</string>
    <string name="strUnidadMateriaPrima">Unidad de la Materia Prima</string>
    <string name="strExistenciaMaximaMateriaPrima">Existencia Máxima de Materia Prima</string>
    <string name="strExistenciaMinimaMateriaPrima">Existencia Mínima de Materia Prima</string>
    <string name="strCostoProducto">Costro de Materia Prima</string>
    <string name="strCostoMateriaPrima">Costo de la Materia Prima</string>
    <string name="strProveedores">Proveedores</string>
    <string name="strExistencias">Existencias</string>
    <string name="strExistenciaMinima">Mínima</string>
    <string name="strExistenciaMaxima">Máxima</string>
    <string name="strExistenciaActual">Actual</string>


    <string name="strRazonSocial">Razon Social</string>
    <string name="strCalle">Calle</string>
    <string name="strEstado">Estado</string>
    <string name="strColonia">Colonia</string>
    <string name="strNumero">Número</string>
    <string name="strMunicipio">Municipio</string>
    <string name="strTelefono">Teléfono</string>
    <string name="strCorreoElectronico">Correo Electrónico</string>
    <string name="strGiro">Giro</string>
    <string name="strProveedor">Proveedor</string>
    <string name="strDescripcion">Descripción</string>


    <!-- String Spinner-->
    <string name="strSpinnerProveedores">Proveedores</string>

    <!-- String Botones-->
    <string name="strBtnIngresar">Ingresar</string>
    <string name="strBtnRegistrar">Registrar</string>
    <string name="strConsultar">Consultar</string>
    <string name="strActualizar">Actualizar</string>

    <!--String Menus-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_deleteProveedor">Eliminar</string>
    <string name="strMenuProveedores">Proveedores</string>
    <string name="strMenuMateriasPrimas">Materias Primas</string>
    <string name="strMenuReportes">Reportes</string>

    <string name="strRegistrarNuevo">Registrar Nuevo</string>
    <string name="strEditar">Editar</string>
    <string name="strEliminar">ELiminar</string>
    <string name="strMenuSalir">Salir</string>

    <!--String Activities-->
    <string name="title_activity_materias_primas">Materias Primas</string>
    <string name="title_activity_informacion_producto">Información Producto</string>
    <string name="title_activity_registrar_materia_prima">Registrar Materia Prima</string>
    <string name="title_activity_registrar_proveedor">RegistrarProveedor</string>
    <string name="title_activity_proveedores">Proveedores</string>
    <string name="title_activity_informacion_proveedor">InformacionProveedor</string>
    <string name="title_activity_editar_materia_prima">EditarMateriaPrima</string>
    <string name="title_activity_editar_proveedor">EditarProveedor</string>

    <!--String TextView Reportes-->
    <string name="strSeleccioneelTipodeReporte.">Seleccione el Tipo de Reporte.</string>
    <string name="strSeleccioneelPeriododelReporte.">Seleccione el Período del Reporte.</string>
    <string name="strDesde">Desde: </string>
    <string name="strHasta">Hasta: </string>

    <!--String TextViewMovimientos-->
    <string name="strEspecifiquelaCantidad">Ingrese los detalles del movimiento:</string>
    <string name="strSpinnerProveedor">Proveedor:</string>
    <string name="strSpinnerCosto">Costo:</string>
    <string name="strNuevaCantidad">Cantidad:</string>
    <string name="strEsAjuste">¿Es Ajuste de Inventario?</string>
    <string name="strAjuste">Ajuste</string>


    <!--String Arrays-->
    <string-array name="MenuPrincipalAdmin">
        <item>Proveedores</item>
        <item>Materias Primas</item>
        <item>Reportes</item>
        <item>Acerca De</item>
        <item>Salir</item>

    </string-array>

    <string-array name="MenuPrincipalEmp">
        <item>Movimientos</item>
        <item>Acerca De</item>
        <item>Salir</item>
    </string-array>

    <string-array name="estados">
        <item>Estado de México</item>
        <item>Querétaro</item>
    </string-array>

    <string-array name="municipiosMexico">
        <item>Toluca</item>
        <item>Metepec</item>
    </string-array>

    <string-array name="municipiosQueretaro">
        <item>Querétaro</item>
    </string-array>

    <!--Submenus-->
    <string-array name="submenu">
        <item>Agregar Nuevo</item>
        <item>Salir</item>
    </string-array>


    <!-- Drawer String-->
    <string name="openDrawer">Abriendo Drawer</string>
    <string name="closeDrawer">Cerradon Drawer</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="strContentImagenProveedor">Logo Proveedor</string>
    <string name="strContentImagenMateria">Logo Materia Prima</string>
    <string name="strContacto">Contacto:</string>
    <string name="proveedorDetailPhone">Large Text</string>
    <string name="strDomicilio">Domicilio:</string>


    <!--Unidades-->
    <string-array name="strSpinnerUnidades">
        <item>Pieza</item>
        <item>Paquete</item>
    </string-array>

    <string-array name="strTiposReportes">
        <item>Historial de Movimientos</item>
        <item>Gastos de Entradas</item>
    </string-array>
    <string name="title_activity_movimiento">Movimiento de Inventario</string>
    <string name="strLogoBanner">Logo Banner</string>
    <string name="title_activity_reportes">Reportes</string>
    <string name="title_activity_existencias">Existencias</string>
    <string name="strContentLogin">logo RaxSoft</string>
    <string name="strFecha">Fecha:</string>
    <string name="strCantidad">Cantidad:</string>
    <string name="strRealizo">Realizó:</string>
    <string name="strMovimientoProveedor">Proveedor:</string>
    <string name="strmovimientoDetailCosto">Costo:</string>
    <string name="title_activity_display_historial">Historial</string>
    <string name="strGastoTotal">Gasto Total:</string>
    <string name="strFechaHora">Fecha y Hora:</string>
    <string name="title_activity_about">Acerca De</string>
    <string name="about_image">Imagen Acerca De</string>
    <string name="strNombreApp">RaxSoft Móvil</string>
    <string name="strVersion">Versión 1.0.1</string>
    <string name="strDesarrolladores">Desarrolladores:</string>
    <string name="strLuis">Arriaga Moreno Luis Alberto</string>
    <string name="strAxel">Sánchez Silva Alejandro Axel</string>
    <string name="strSusana">Torres Cruz Susana Anahí</string>
    <string name="strTec">Instituto Tecnológico de Toluca</string>
    <string name="strDesarrollo">Desarrollo Móvil</string>
    <string name="strFechaEntrega">Noviembre de 2015</string>
    <string name="strMavenDevelopers">Logo Maven Developers</string>
    <string name="strDescripcionModulo">Módulo de Control de Inventarios.</string>


</resources>
