<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.maven.raxsoft.gui.EditarMateriaPrima">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/strCodigoProducto"
                android:ems="10"
                android:id="@+id/idEdTeEditarCodigoProducto" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/strNombreProudcto"
                android:ems="10"
                android:id="@+id/idEdTeEditarNombreProducto" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/strDescripcionProducto"
                android:ems="10"
                android:id="@+id/idEdTeEditarDescripcionProducto" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/strUnidadMateriaPrima"
                android:ems="10"
                android:id="@+id/idEdTeEditarUnidad" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idSpEditarProveedor" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/strExistenciaMinimaMateriaPrima"
                android:ems="10"
                android:id="@+id/idEdTeEditarExistenciaMinima" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/strExistenciaMaximaMateriaPrima"
                android:ems="10"
                android:id="@+id/idEdTeEditarExistenciaMaxima" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@+id/strBtnActualizar"
                android:id="@+id/strBtnActualizar" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
